--- a/ConcurrencyLab/Base.lproj/Main.storyboard
+++ b/ConcurrencyLab/Base.lproj/Main.storyboard
@@ -30,27 +30,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="178"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Jor-vO-X0O">
-                                                    <rect key="frame" x="20" y="52.5" width="100" height="72.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Jor-vO-X0O">
+                                                    <rect key="frame" x="20" y="40" width="125" height="97.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="75" id="FK5-3V-qyS"/>
-                                                        <constraint firstAttribute="width" constant="100" id="GmW-I1-zBM"/>
+                                                        <constraint firstAttribute="height" constant="100" id="FK5-3V-qyS"/>
+                                                        <constraint firstAttribute="width" constant="125" id="GmW-I1-zBM"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Capital" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCa-rs-tPB">
-                                                    <rect key="frame" x="136" y="49.5" width="258" height="18"/>
+                                                    <rect key="frame" x="161" y="49.5" width="233" height="18"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SAh-cC-CYS">
-                                                    <rect key="frame" x="136" y="21" width="258" height="20.5"/>
+                                                    <rect key="frame" x="161" y="21" width="233" height="20.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Population" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mrw-kp-9xV">
-                                                    <rect key="frame" x="136" y="77.5" width="258" height="18"/>
+                                                    <rect key="frame" x="161" y="77.5" width="233" height="18"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -94,6 +94,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Countries" id="yiG-DV-Dao"/>
                     <connections>
+                        <outlet property="searchBar" destination="yPK-N1-6pd" id="lDm-M0-nac"/>
                         <outlet property="tableView" destination="59q-RT-Mwv" id="kWi-vL-T5Z"/>
                     </connections>
                 </viewController>
