--- a/ConcurrencyLab/Base.lproj/Main.storyboard
+++ b/ConcurrencyLab/Base.lproj/Main.storyboard
@@ -75,6 +75,7 @@
                                             <outlet property="countryLabel" destination="SAh-cC-CYS" id="SPs-0z-f3q"/>
                                             <outlet property="flagImage" destination="Jor-vO-X0O" id="UxP-XF-XSx"/>
                                             <outlet property="populationLabel" destination="Mrw-kp-9xV" id="PIC-mc-cDB"/>
+                                            <segue destination="JLk-HK-aNt" kind="show" id="bok-GU-qbL"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -101,6 +102,68 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="852.17391304347836" y="112.5"/>
+        </scene>
+        <!--Country Detail Controller-->
+        <scene sceneID="cca-Wg-ayk">
+            <objects>
+                <viewController id="JLk-HK-aNt" customClass="CountryDetailController" customModule="ConcurrencyLab" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="585-6y-OXw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lbf-W7-lG3">
+                                <rect key="frame" x="20" y="286" width="374" height="33.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="capital" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sga-rE-n7W">
+                                <rect key="frame" x="30" y="349.5" width="354" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Population" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCm-FD-K9e">
+                                <rect key="frame" x="30" y="400" width="354" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d5I-WE-8M3">
+                                <rect key="frame" x="87" y="138" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="PAC-lN-15u"/>
+                                    <constraint firstAttribute="height" constant="128" id="c1G-Eb-B4g"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="H1E-LR-nx9" firstAttribute="trailing" secondItem="Lbf-W7-lG3" secondAttribute="trailing" constant="20" id="7Kh-wd-GGf"/>
+                            <constraint firstItem="H1E-LR-nx9" firstAttribute="trailing" secondItem="sga-rE-n7W" secondAttribute="trailing" constant="30" id="7L9-D1-Bqo"/>
+                            <constraint firstItem="H1E-LR-nx9" firstAttribute="trailing" secondItem="gCm-FD-K9e" secondAttribute="trailing" constant="30" id="URd-1A-EMX"/>
+                            <constraint firstItem="d5I-WE-8M3" firstAttribute="top" secondItem="H1E-LR-nx9" secondAttribute="top" constant="50" id="VBc-GY-omk"/>
+                            <constraint firstItem="Lbf-W7-lG3" firstAttribute="top" secondItem="d5I-WE-8M3" secondAttribute="bottom" constant="20" id="VFJ-TX-6be"/>
+                            <constraint firstItem="sga-rE-n7W" firstAttribute="top" secondItem="Lbf-W7-lG3" secondAttribute="bottom" constant="30" id="VqR-QH-Fnw"/>
+                            <constraint firstItem="sga-rE-n7W" firstAttribute="leading" secondItem="H1E-LR-nx9" secondAttribute="leading" constant="30" id="cK1-qE-sew"/>
+                            <constraint firstItem="d5I-WE-8M3" firstAttribute="centerX" secondItem="585-6y-OXw" secondAttribute="centerX" id="eN4-aF-uYa"/>
+                            <constraint firstItem="gCm-FD-K9e" firstAttribute="top" secondItem="sga-rE-n7W" secondAttribute="bottom" constant="30" id="idC-dQ-RoG"/>
+                            <constraint firstItem="gCm-FD-K9e" firstAttribute="leading" secondItem="H1E-LR-nx9" secondAttribute="leading" constant="30" id="smj-cu-Qby"/>
+                            <constraint firstItem="Lbf-W7-lG3" firstAttribute="leading" secondItem="H1E-LR-nx9" secondAttribute="leading" constant="20" id="utR-AQ-fJn"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="H1E-LR-nx9"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="8Xn-A4-ASw"/>
+                    <connections>
+                        <outlet property="capitalLabel" destination="sga-rE-n7W" id="7gG-cW-AVt"/>
+                        <outlet property="flagImage" destination="d5I-WE-8M3" id="jnp-8J-TWc"/>
+                        <outlet property="nameLabel" destination="Lbf-W7-lG3" id="pu4-XB-Rhq"/>
+                        <outlet property="populationLabel" destination="gCm-FD-K9e" id="URJ-Y7-wr2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="10y-XR-PEf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1767" y="113"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Et1-sy-woW">
